data/all_generated_tests/raw_wast_tests/call_indirect_TypeMismatchinControlFlowInstructions_4608.wast
;; 7. **Test Description**:    - Create a test to perform a `call_indirect` within a try-catch block where the expected function type expects a string (unsupported in WASM), and the actual function provides an integer, expecting a strict adherence to types leading to a trap.    - **Constraint Being Checked**:      - Proper enforcement of recognized and supported type constraints within control flow handlers.    - **Relation to Control Flow Instructions**:      - Ensures error handling mechanisms enforce WASM type norms.

(assert_invalid
  (module
    (type (func (param i32) (result i32)))
    (table 1 funcref)
    (func $foo (param i32) (result i32)
      local.get 0
    )
    (elem (i32.const 0) $foo)
    (func (param i32) (result i32)
      try (result i32)
        local.get 0
        call_indirect (type 0) (i32.const 0)
      catch
        i32.const 0
      end
    )
  )
  "type mismatch"
)